--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -98,12 +98,16 @@ For the details of each command, you may refer to the link:#features[Features] s
 * Parameters can be in any order e.g. if the command specifies `n/NAME p/PHONE_NUMBER`, `p/PHONE_NUMBER n/NAME` is also acceptable.
 ====
 
+[[add]]
 === `add`, `a` or `+`: Adding a Person _(Since v1.3)_
 
 Adds a person to Rolodex +
 Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [r/REMARK] [t/TAG]...` +
-        or `a n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [r/REMARK] [t/TAG]...` +
-        (press kbd:[Tab] after typing `add` for auto-completion) +
+[TIP]
+====
+Press kbd:[Tab] after typing `add` to generate the required field(s). See link:#autocomplete[3.19. Auto-completion] for more details.
+====
+Alternatives: `add` can be replaced by `a` or `+` +
 Keyboard shortcut: kbd:[Ctrl+A]
 
 [TIP]
@@ -133,8 +137,13 @@ Clear commands are _undoable_ with the `undo` command.
 === `delete`, `d` or `-`: Deleting a Person _(Since v1.3)_
 
 Deletes the specified person from Rolodex. +
-Format: `delete INDEX` or `d INDEX`
-        (press kbd:[Tab] after typing `delete` for auto-completion)
+Format: `delete INDEX`
+
+[TIP]
+====
+Press kbd:[Tab] after typing `delete` to generate the required field(s). See link:#autocomplete[3.19. Auto-completion] for more details.
+====
+Alternatives: `delete` can be replaced by `d` or `-` +
 Keyboard shortcut: kbd:[Ctrl+Shift+D]
 
 ****
@@ -157,12 +166,16 @@ Deletes the 1st person in the results of the `find` command.
 Delete commands are _undoable_ with the `undo` command.
 ====
 
-=== `edit`, `e`, `change` or `modify`: Editing a Person _(Since v1.3)_
+[[edit]]
+=== `edit`, `change`, `modify` or `e`: Editing a Person _(Since v1.3)_
 
 Edits an existing person in Rolodex. +
 Format: `edit INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [r/REMARK] [t/TAG]...` +
-        or `e INDEX [n/NAME] [p/PHONE] [e/EMAIL] [a/ADDRESS] [r/REMARK] [t/TAG]...` +
-        (press kbd:[Tab] after typing `edit` for auto-completion) +
+[TIP]
+====
+Press kbd:[Tab] after typing `edit` to generate the required field(s). See link:#autocomplete[3.19. Auto-completion] for more details.
+====
+Alternatives: `edit` can be replaced by `change`, `modify` or `e` +
 Keyboard shortcut: kbd:[Ctrl+E]
 
 ****
@@ -189,9 +202,13 @@ Edit commands are _undoable_ with the `undo` command.
 === `email`, `mail`, `mailto`, `send` or `m`: Composing an email _(Since v1.5rc)_
 
 Opens the 'compose new email' window of the default email client, with the recipient's email address and subject
-(if available) filled in. +
-Format: `email` INDEX [s/SUBJECT] +
-(`email` can be replaced by `mail`, `mailto`, `send` or `m`) +
+(optional) filled in. +
+Format: `email INDEX [s/SUBJECT]` +
+[TIP]
+====
+Press kbd:[Tab] after typing `email` to generate the required field(s). See link:#autocomplete[3.19. Auto-completion] for more details.
+====
+Alternatives: `email` can be replaced by `mail`, `mailto`, `send` or `m` +
 Keyboard shortcut: kbd:[Ctrl+M]
 
 // tag::find[]
@@ -200,15 +217,18 @@ Keyboard shortcut: kbd:[Ctrl+M]
 
 Exits the program. +
 Format: `exit` +
+Alternatives: `exit` can be replaced by `quit`, `close`, `bye` or `esc` +
 Keyboard shortcut: kbd:[Alt+F4]
 
-=== `find`, `f`, `filter` or `search`: Locating Persons in Rolodex _(Since v1.4)_
+=== `find`, `filter`, `search` or `f`: Locating Persons in Rolodex _(Since v1.4)_
 
 Finds persons in Rolodex. +
-Format: `find KEYWORD [MORE_KEYWORDS] [SORT_ARGUMENTS]`
-        or `f KEYWORD [MORE_KEYWORDS] [SORT_ARGUMENTS]`
-        or `search KEYWORD [MORE_KEYWORDS] [SORT_ARGUMENTS]` +
-        (press kbd:[Tab] after typing `find` for auto-completion) +
+Format: `find KEYWORD [MORE_KEYWORDS] [SORT_ARGUMENTS]` +
+[TIP]
+====
+Press kbd:[Tab] after typing `find` to generate the required field(s). See link:#autocomplete[3.19. Auto-completion] for more details.
+====
+Alternatives: `find` can be replaced by `filter`, `search` or `f` +
 Keyboard shortcut: kbd:[Ctrl+F]
 
 ****
@@ -254,15 +274,17 @@ Returns any person having tag `School` or tag `werk`, sorted by email.
 Returns an error (do not count as search arguments).
 // end::find[]
 
-=== `help`, `h`, `assist` or `faq`: Viewing Help _(Since v1.4)_
+=== `help`, `assist`, `faq` or `h`: Viewing Help _(Since v1.4)_
 
-Format: `help` or `h` +
+Format: `help` +
+Alternatives: `help` can be replaced with `assist`, `faq` or `h` +
 Keyboard shortcut: kbd:[F1]
 
 === `history`, `his` or `past`: Listing Entered Commands _(Since v1.3)_
 
 Lists all the commands that you have entered in reverse chronological order. +
-Format: `history` or `his` or `past` +
+Format: `history` +
+Alternatives: `history` can be replaced by `his` or `past` +
 Keyboard shortcut: kbd:[Ctrl+H]
 
 [NOTE]
@@ -271,10 +293,11 @@ Pressing the kbd:[&uarr;] and kbd:[&darr;] arrows will display the previous and 
 ====
 
 // tag::list[]
-=== `list`, `l`, `show` or `display`: Listing All Persons _(Since v1.3)_
+=== `list`, `show`, `display` or `l`: Listing All Persons _(Since v1.3)_
 
 Shows a list of all persons in Rolodex, sorted by the specified sort order or default sort order. +
-Format: `list [SORT_ARGUMENTS]` or `l [SORT_ARGUMENTS]` +
+Format: `list [SORT_ARGUMENTS]` +
+Alternatives: `list` can be replaced by `show`, `display` or `l` +
 Keyboard shortcut: kbd:[Ctrl+L]
 
 // tag::sortUsage[]
@@ -303,7 +326,7 @@ Examples:
 === `new`, `n`, `touch` or `>`: Creating a New Rolodex Storage File _(Since v1.3)_
 
 Creates a new Rolodex at the specified filepath and reloads the application with new sample data. +
-Format: `new FILEPATH` or `n FILEPATH`
+Format: `new FILEPATH` or `n FILEPATH` +
 Keyboard Shortcut: kbd:[Ctrl+N]
 
 ****
@@ -332,7 +355,7 @@ Creates a new Rolodex file `default.rldx` at the relative directory `data` and r
 
 // tag::openfile[]
 
-=== `open`, `o`, `cd`, `ls`, `<`: Opening an Existing Rolodex Storage File _(Since v1.3)_
+=== `open`, `o`, `cd`, `ls` or `<`: Opening an Existing Rolodex Storage File _(Since v1.3)_
 
 Reloads the application with data from a rolodex at the specified filepath. +
 Format: `open FILEPATH` or `o FILEPATH`
@@ -396,10 +419,11 @@ The `redo` command fails as there are no `undo` commands executed previously.
 Redo commands are _undoable_ with the `undo` command.
 ====
 
-=== `remark` or `note` or `rmk`: Adding a Remark _(Coming in V2.0)_
+=== `remark`, `note` or `rmk`: Adding a Remark _(Coming in V2.0)_
 
 Adds a remark to the specified person in Rolodex. +
-Format: `remark INDEX [r/REMARK]` or `remark INDEX [r/REMARK]`
+Format: `remark INDEX [r/REMARK]` +
+Alternatives: `remark` can be replaced by `note` or `rmk`
 
 ****
 * Adds a remark to the person at the specified `INDEX`.
@@ -423,8 +447,11 @@ There is no need to save manually.
 === `select` or `s`: Selecting a Person _(Since v1.3)_
 
 Selects the person identified by the index number used in the last person listing. +
-Format: `select INDEX` or `s INDEX`
-        (press kbd:[Tab] after typing `select` for auto-completion)
+Format: `select INDEX` or `s INDEX` +
+[TIP]
+====
+Press kbd:[Tab] after typing `select` to generate the required field(s). See link:#autocomplete[3.19. Auto-completion] for more details.
+====
 Keyboard shortcut: kbd:[Ctrl+S]
 
 ****
@@ -444,11 +471,13 @@ Selects the 1st person in the results of the `find` command.
 
 === Tagging a Person
 
-Tagging a person can be done with the `add` or `edit` commands.
+* You can directly add tag(s) to a person when you are adding him/her to Rolodex for the first time.
+See link:#add[3.1. Adding a Person] for more details.
+* To add tag(s) to existing contacts in Rolodex, you use the `edit INDEX t/TAG` command. See link:#edit[3.4. Editing a Person] for more details.
 
 === `undo` or `u`: Undoing a Previous Command _(Since v1.3)_
 
-Restores Rolodex to the state before the previous _undoable_ command was executed. +
+Some commands in rolodex are undoable. If you accidentally executed an undoable command, you can restore Rolodex to the previous state using the undo command. +
 Format: `undo` or `u` +
 Keyboard Shortcut: kbd:[Ctrl+Z]
 
@@ -473,6 +502,33 @@ The `undo` command fails as there are no undoable commands executed previously.
 `clear` +
 `undo` (reverses the `clear` command) +
 `u` (reverses the `delete 1` command) +
+
+[[autocomplete]]
+=== Auto-completion
+
+For commands that require additional field(s), auto-completion can be triggered by pressing kbd:[Tab] after keying in the command word.
+
+Example:
+
+* Type `add` in the command box +
+* Press kbd:[Tab]
+* You will see the full format displayed in the command box as shown below.
+
+image::AutoCompletionAfterTab.png[width="500"]
+
+* Note that the placeholder for the name field has been auto-selected. Now you can directly type in the name.
+* After you are done typing the name, press kbd:[Tab] again to go to the next field.
+
+image::AutoCompletionNextField.png[width="500"]
+
+* After you are done with the entire command, press kbd:[Enter] to execute the command.
+
+[NOTE]
+====
+Commands with auto-completion enabled: `add`, `delete`, `edit`, `find`, `select` and `remark`. +
+These are commands that required additonal field(s).
+====
+
 
 == Upcoming Features
 
