--- a/README.adoc
+++ b/README.adoc
@@ -18,12 +18,13 @@ image::images/Ui.png[width="600"]
 endif::[]
 
 // tag::applicationDescription[]
-Rolodex is a desktop contact management application for users who prefer working without a mouse to manage their contacts more efficiently.
-If you are a businessmen with a list of clients to remember, a teacher who wants to organize their student information, or anyone with a need for contact
-management, Rolodex provides you with a way to organize your important contacts in a fast and productive manner.
+Rolodex is a desktop contact management application for people who have many social circles and wish to organise different groups of contacts separately and efficiently. +
+
+If you are a businessmen with a long list of clients to keep in touch with, a teacher with the contact information of hundreds of students in your phone,
+a freelancer with multiple groups of co-workers or customers, or just anyone with a need for fast and easy contact management, Rolodex is perfect for you.
 
 The user interacts with the application using a CLI (Command Line Interface), and it has a GUI created with JavaFX.
-It is written in Java, and has about 6 kLoC. +
+It is written in Java, and has about 6 kLoC.
 
 Rolodex is an extension of AddressBook - Level 4, which is a desktop address book application used for teaching Software Engineering principles.
 // end::applicationDescription[]
