--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -101,7 +101,7 @@ For the details of each command, you may refer to the link:#features[Features] s
 [[add]]
 === `add`, `a` or `+`: Adding a Person _(Since v1.3)_
 
-Adds a person to Rolodex +
+Adds a person to Rolodex. +
 Format: `add n/NAME p/PHONE_NUMBER e/EMAIL a/ADDRESS [r/REMARK] [t/TAG]...` +
 [TIP]
 ====
@@ -284,8 +284,7 @@ Keyboard shortcut: kbd:[F1]
 === `history`, `his` or `past`: Listing Entered Commands _(Since v1.3)_
 
 Lists all the commands that you have entered in reverse chronological order. +
-Format: `history` +
-Alternatives: `history` can be replaced by `his` or `past` +
+Format: `history`, `his` or `past` +
 Keyboard shortcut: kbd:[Ctrl+H]
 
 [NOTE]
@@ -420,7 +419,7 @@ The `redo` command fails as there are no `undo` commands executed previously.
 Redo commands are _undoable_ with the `undo` command.
 ====
 
-=== `remark`, `note` or `rmk`: Adding a Remark _(Coming in V2.0)_
+=== `remark`, `note` or `rmk`: Adding a Remark _(Since v1.4)_
 
 Adds a remark to the specified person in Rolodex. +
 Format: `remark INDEX [r/REMARK]` +
