--- a/docs/team/engsheng.adoc
+++ b/docs/team/engsheng.adoc
@@ -4,7 +4,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 :stylesDir: ../stylesheets
 
 == image:engsheng_projectheader.png[width="900"]
-UNIFY is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
+`UNIFY` is a Command Line Interface AddressBook that helps users manage your contacts efficiently. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 12 kLoC.
 
 *Code contributed*: [https://github.com/CS2103AUG2017-W11-B4/main/blob/master/collated/main/hanselblack.md[Functional code]] [https://github.com/CS2103AUG2017-W11-B4/main/blob/master/collated/test/hanselblack.md[Test code]]
 
